# vibe-team

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  MIGRATION_PLAN.md  PROJECT_SUMMARY.md  README.md  beebeebrain.db  chat-test-report.md  claude.md  coverage.xml  docker-compose.yml  frontend_copy_tasks.md  index.html  meeting1.md  package-lock.json  package.json  pyproject.toml  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh  start_project.md  tailwind.config.js  tasks.md  test_e2e.js
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  beebeebrain.db  pyproject.toml  run_server.py  start_backend.bat
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/scripts/: api_probe.py  claude_sdk_demo.py  debug_claude_sdk.py  events_stream_stress.py  failure_recovery_probe.py  rollback_with_backup.ps1  rollback_with_backup.sh  start_dev.ps1  start_dev.sh  test_event_loop_solutions.py
backend/tests/: conftest.py  shared.py  test_agents_tasks_api.py  test_cli_tools.py  test_comments_reply_api.py  test_config.py  test_context_builder.py  test_conversation_executor.py  test_conversations_api.py  test_db_schema.py  test_debug_api.py  test_events_api.py  test_health.py  test_inbox_api.py  test_llm_claude_adapter.py  test_llm_claude_code.py  test_llm_factory.py  test_llm_usage.py  test_local_api_key_auth.py  test_logs_api.py  test_metrics_api.py  test_model_constraints.py  test_phase8_integration_api.py  test_repositories.py  test_run_state_machine.py  test_runtime_execution.py  test_runtime_failure_injection.py  test_security_file_guard.py  test_security_redaction.py  (+6 more)
(+204 files in other folders)
