[project]
name = "beebeebrain-backend"
version = "0.1.0"
description = "BeeBeeBrain backend service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6,<1.0.0",
  "sqlmodel>=0.0.22,<0.1.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "pydantic>=2.10.5,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "alembic>=1.18.3",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=70"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4,<10.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "ruff>=0.9.2,<1.0.0",
  "black>=24.10.0,<27.0.0",
  "mypy>=1.14.1,<2.0.0",
  "pre-commit>=4.0.1,<5.0.0",
]

[tool.mypy]
python_version = "3.11"
files = ["app", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

